--- a/bugtrackingsystem.client/src/app/layout/MainLayout.css
+++ b/bugtrackingsystem.client/src/app/layout/MainLayout.css
@@ -1,40 +1,3 @@
-.layout {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-/* Header at top */
-.header {
-  background-color: #1e293b;
-  color: white;
-  padding: 1rem;
-}
-
-/* Body below header */
-/* .body {
-  display: flex;
-  flex: 1;
-} */
-
-/* Sidebar on left */
-/* .sidebar {
-  width: 220px;
-  background-color: #f1f5f9;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-} */
-
-/* Main content area */
-.content {
-  flex: 1;
-  padding: 1.5rem;
-  background-color: #ffffff;
-} 
-
-
 /* Burger and menu */
 .navbar-menu {
   height:100vh;
@@ -80,8 +43,8 @@
   cursor: pointer;
 }
 
+/* main body page */
 .app-container {
   display: flex; /* Activates Flexbox on the parent */
   min-height: 100vh; /* Ensures the container takes up the full screen height */
-
 }
